ruka-lang.org/src/lib/interpreter/fixtures/ok/fibonacci.ruka
let fib = (n) do
	n if n <= 1 else fib(n - 1) + fib(n - 2)
end

let main = () do
	for i in 0..=10 do
		ruka.println("fib(${i}) = ${fib(i)}")
	end
end
