ruka-lang.org/src/lib/interpreter/fixtures/type-err/if-branch-mismatch.ruka
// expect: type mismatch
let main = () do
    let x = if true do 1 else "two"
end
